Improved HTML/CSS Layout of home and survey pages

--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -17,52 +17,63 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body background="http://www.modafinilsale.com/data/out/229/234261223-yin-yang-backgrounds.jpg">
 
-    <div>
-      <h1>Friend Finder</h1>
-    </div>
+    <div id="center">
 
-    <br>
+      <div>
+        <h1>Friend Finder</h1>
+      </div>
 
-    <img
-      id="friends"
-      src="https://shawglobalnews.files.wordpress.com/2014/09/friendsopening.jpg?quality=70&strip=all&w=720"
-      width="500px"
-      height="350px"
-    >
+      <br>
 
-    <br>
+      <div>
+        <h5>
+          Answer a few basic questions. Then find the friend with the greatest compatibility!
+        </h5>
+      </div>
 
-    <div>
-      <h5>
-        Answer a few basic questions. Then find the friend with the greatest compatibility!
-      </h5>
-    </div>
+      <br>
 
-    <br>
-
-    <button id="begin">Begin Survey</button>
+      <div>
+      <button id="begin"><strong>Begin Survey</strong></button>
+      </div>
+  </div>
 
     <!-- Internal Style Sheet -->
     <style>
 
       html, body {
-        background-color: black;
+        height: 100%;
+        width:100%;
+        background-image: url("https://wallpapercave.com/wp/nNRWb9m.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
       }
 
       h1,h5 {
         display: flex;
         justify-content: center;
-        color: whitesmoke;
-        margin: 20px;
+        margin: auto;
+        font-size: 25px;
+        -webkit-text-stroke: 0.1px whitesmoke;
       }
 
-      #friends, #begin {
+      h1 {
+        font-size: 45px;
+      }
+
+      #begin {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 50%;
+        width: 10%;
+      }
+
+      #center {
+        margin: auto;
+        text-align: left;
+        padding: 200px 0;
       }
     </style>
 
