--- a/FriendFinder/app/public/survey.html
+++ b/FriendFinder/app/public/survey.html
@@ -9,43 +9,110 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   </head>
-  <body>
+  <body background="http://www.modafinilsale.com/data/out/229/234261223-yin-yang-backgrounds.jpg">
 
-    <div>
-        <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+    <div id="aligned">
 
-I consider myself a mostly happy person.
-I enjoy helping people.
-I’m not superstitious, but I am a little stitious.
-I generally feel more comfortable when alone than when around other people.
-I solemnly swear that I am up to no good.
-I enjoy reading books.
-I am susceptible to the occasional Netflix binge.
-If I am not right about something, I want someone to tell me.
-I generally know what I want in life.
-I am smart af. -->
+      <div>
+        <h1>Compatibility Survey</h1>
+      </div>
 
-               
-        </ol>
-    </div>
+      <br>
 
+      <div>
+        <h3><strong>About You</strong></h3>
+      </div>
 
-      
+      <form>
+          <div class="form-group">
+            <label for="formGroupExampleInput"><strong>Name (Required)</strong></label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+          </div>
+          <div class="form-group">
+            <label for="formGroupExampleInput2"><strong>Link to Photo Image (Required)</strong></label>
+            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+          </div>
+        </form>
+
+      <!-- <div>
+        <h5>
+            I consider myself a mostly happy person.
+            I enjoy helping people.
+            I’m not superstitious, but I am a little stitious.
+            I generally feel more comfortable when alone than when around other people.
+            I solemnly swear that I am up to no good.
+            I enjoy reading books.
+            I am susceptible to the occasional Netflix binge.
+            If I am not right about something, I want someone to tell me.
+            I generally know what I want in life.
+            I am smart af.
+        </h5>
+      </div> -->
+
+      <br>
+
+      <div>
+          <button id="submit"><strong>Submit</strong></button>
+      </div>
+
+  </div>
+
+    <!-- Internal Style Sheet -->
+    <style>
+
+      html, body {
+        height: 100%;
+        width:100%;
+        background-image: url("https://wallpapercave.com/wp/nNRWb9m.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        -webkit-text-stroke: 0.1px whitesmoke;
+      }
+
+      h1 {
+        font-size: 45px;
+      }
+
+      h3 {
+        font-size: 30px;
+      }
+
+      h5 {
+        font-size: 20px;
+      }
+
+      #submit {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 10%;
+      }
+
+      #aligned {
+        padding: 30px;
+      }
+
+    </style>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js"
+      integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
+
+
 
