Improved Survey Questions Layout

--- a/FriendFinder/app/public/survey.html
+++ b/FriendFinder/app/public/survey.html
@@ -23,31 +23,166 @@
         <h3><strong>About You</strong></h3>
       </div>
 
+      <div>
       <form>
           <div class="form-group">
             <label for="formGroupExampleInput"><strong>Name (Required)</strong></label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ex: Jack Bauer">
           </div>
           <div class="form-group">
             <label for="formGroupExampleInput2"><strong>Link to Photo Image (Required)</strong></label>
-            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Ex: https://pmcdeadline2.files.wordpress.com/2018/07/24-jack-bauer.jpg?w=446&h=299&crop=1">
           </div>
         </form>
+      </div>
 
-      <!-- <div>
-        <h5>
-            I consider myself a mostly happy person.
-            I enjoy helping people.
-            I’m not superstitious, but I am a little stitious.
-            I generally feel more comfortable when alone than when around other people.
-            I solemnly swear that I am up to no good.
-            I enjoy reading books.
-            I am susceptible to the occasional Netflix binge.
-            If I am not right about something, I want someone to tell me.
-            I generally know what I want in life.
-            I am smart af.
-        </h5>
-      </div> -->
+      <div>
+          <label for="inputState"><strong>Statement 1</strong></label><br>
+          <p>I consider myself a mostly happy person.</p>
+          <select id="inputState" class="form-control">
+            <option selected>Select an Option...</option>
+            <option>1 (Strongly Disagree)</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5 (Strongly Agree)</option>
+          </select>
+      </div>
+
+      <br>
+
+      <div>
+          <label for="inputState"><strong>Statement 2</strong></label><br>
+          <p>I enjoy helping people.</p>
+          <select id="inputState" class="form-control">
+            <option selected>Select an Option...</option>
+            <option>1 (Strongly Disagree)</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5 (Strongly Agree)</option>
+          </select>
+      </div>
+
+      <br>
+
+      <div>
+          <label for="inputState"><strong>Statement 3</strong></label><br>
+          <p>I’m not superstitious, but I am a little stitious.</p>
+          <select id="inputState" class="form-control">
+            <option selected>Select an Option...</option>
+            <option>1 (Strongly Disagree)</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5 (Strongly Agree)</option>
+          </select>
+      </div>
+
+      <br>
+
+      <div>
+          <label for="inputState"><strong>Statement 4</strong></label><br>
+          <p>I generally feel more comfortable when alone than when around other people.</p>
+          <select id="inputState" class="form-control">
+            <option selected>Select an Option...</option>
+            <option>1 (Strongly Disagree)</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5 (Strongly Agree)</option>
+          </select>
+      </div>
+
+      <br>
+
+      <div>
+          <label for="inputState"><strong>Statement 5</strong></label><br>
+          <p>I solemnly swear that I am up to no good.</p>
+          <select id="inputState" class="form-control">
+            <option selected>Select an Option...</option>
+            <option>1 (Strongly Disagree)</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5 (Strongly Agree)</option>
+          </select>
+      </div>
+
+      <br>
+
+      <div>
+          <label for="inputState"><strong>Statement 6</strong></label><br>
+          <p>I enjoy reading books.</p>
+          <select id="inputState" class="form-control">
+            <option selected>Select an Option...</option>
+            <option>1 (Strongly Disagree)</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5 (Strongly Agree)</option>
+          </select>
+      </div>
+
+      <br>
+
+      <div>
+          <label for="inputState"><strong>Statement 7</strong></label><br>
+          <p>I am susceptible to the occasional Netflix binge.</p>
+          <select id="inputState" class="form-control">
+            <option selected>Select an Option...</option>
+            <option>1 (Strongly Disagree)</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5 (Strongly Agree)</option>
+          </select>
+      </div>
+
+      <br>
+
+      <div>
+          <label for="inputState"><strong>Statement 8</strong></label><br>
+          <p>If I am not right about something, I want someone to tell me.</p>
+          <select id="inputState" class="form-control">
+            <option selected>Select an Option...</option>
+            <option>1 (Strongly Disagree)</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5 (Strongly Agree)</option>
+          </select>
+      </div>
+
+      <br>
+
+      <div>
+          <label for="inputState"><strong>Statement 9</strong></label><br>
+          <p>I generally know what I want in life.</p>
+          <select id="inputState" class="form-control">
+            <option selected>Select an Option...</option>
+            <option>1 (Strongly Disagree)</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5 (Strongly Agree)</option>
+          </select>
+      </div>
+
+      <br>
+
+      <div>
+          <label for="inputState"><strong>Statement 10</strong></label><br>
+          <p>I am smart af.</p>
+          <select id="inputState" class="form-control">
+            <option selected>Select an Option...</option>
+            <option>1 (Strongly Disagree)</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5 (Strongly Agree)</option>
+          </select>
+      </div>
 
       <br>
 
@@ -65,7 +200,6 @@
         width:100%;
         background-image: url("https://wallpapercave.com/wp/nNRWb9m.jpg");
         background-position: center;
-        background-repeat: no-repeat;
         -webkit-text-stroke: 0.1px whitesmoke;
       }
 
@@ -89,7 +223,11 @@
       }
 
       #aligned {
-        padding: 30px;
+        padding: 40px;
+      }
+
+      p {
+        font-weight: bold;
       }
 
     </style>
