Made html styling uniform

--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -29,14 +29,15 @@
 
       <div>
         <h5>
-          Answer a few basic questions. Then find the friend with the greatest compatibility!
+          Fill out a short survey, and find a <br>
+          friend with the greatest compatibility!
         </h5>
       </div>
 
       <br>
 
       <div>
-      <button id="begin"><strong>Begin Survey</strong></button>
+      <button id="begin"><strong>Begin</strong></button>
       </div>
   </div>
 
@@ -56,7 +57,7 @@
         justify-content: center;
         margin: auto;
         font-size: 25px;
-        -webkit-text-stroke: 0.1px whitesmoke;
+        -webkit-text-stroke: 0.3px whitesmoke;
       }
 
       h1 {
