--- a/FriendFinder/app/public/survey.html
+++ b/FriendFinder/app/public/survey.html
@@ -187,7 +187,7 @@
       <br>
 
       <div>
-          <button id="submit"><strong>Submit</strong></button>
+          <button id="end"><strong>End</strong></button>
       </div>
 
   </div>
@@ -200,7 +200,8 @@
         width:100%;
         background-image: url("https://wallpapercave.com/wp/nNRWb9m.jpg");
         background-position: center;
-        -webkit-text-stroke: 0.1px whitesmoke;
+        color: black;
+        -webkit-text-stroke: 0.5px whitesmoke;
       }
 
       h1 {
@@ -215,7 +216,7 @@
         font-size: 20px;
       }
 
-      #submit {
+      #end {
         display: block;
         margin-left: auto;
         margin-right: auto;
@@ -228,6 +229,11 @@
 
       p {
         font-weight: bold;
+        font-size: 20px;
+      }
+
+      label {
+        font-size: 20px;
       }
 
     </style>
