--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -57,6 +57,7 @@
         justify-content: center;
         margin: auto;
         font-size: 25px;
+        font-weight: bold;
         -webkit-text-stroke: 0.3px whitesmoke;
       }
 
