Added hyperlinks to home.html

--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -39,6 +39,13 @@
       <div>
       <button id="begin"><strong>Begin</strong></button>
       </div>
+
+      <br>
+
+      <div>
+      <a href="https://friend-finder-fsf.herokuapp.com/api/friends" target="_blank">API Friends List</a> | <a href="https://github.com/thescottbob/Friend-Finder" target="_blank">GitHub Repo</a>
+      </div>
+
   </div>
 
     <!-- Internal Style Sheet -->
@@ -74,7 +81,7 @@
 
       #center {
         margin: auto;
-        text-align: left;
+        text-align: center;
         padding: 200px 0;
       }
     </style>
