Made home.html styles uniform

--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -84,6 +84,13 @@
         text-align: center;
         padding: 200px 0;
       }
+
+      a {
+        font-weight: bold;
+        color: black;
+        font-size: 18px;
+        -webkit-text-stroke: 0.2px whitesmoke;
+      }
     </style>
 
     <!-- Optional JavaScript -->
