--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -16,6 +16,8 @@
       integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
       crossorigin="anonymous"
     />
+
+    <script type='text/javascript' src='../routing/htmlRoutes.js'></script>
   </head>
   <body background="http://www.modafinilsale.com/data/out/229/234261223-yin-yang-backgrounds.jpg">
 
@@ -43,7 +45,7 @@
       <br>
 
       <div>
-      <a href="https://friend-finder-fsf.herokuapp.com/api/friends" target="_blank">API Friends List</a> | <a href="https://github.com/thescottbob/Friend-Finder" target="_blank">GitHub Repo</a>
+      <a href="https://friend-finder-fsf.herokuapp.com/api/friends" target="_blank">API Friends List</a> &ensp;&ensp; <a href="https://github.com/thescottbob/Friend-Finder" target="_blank">GitHub Repo</a>
       </div>
 
   </div>
