Standardized input box length

--- a/FriendFinder/app/public/survey.html
+++ b/FriendFinder/app/public/survey.html
@@ -26,12 +26,12 @@
       <div>
       <form>
           <div class="form-group">
-            <label for="formGroupExampleInput"><strong>Name (Required)</strong></label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ex: Jack Bauer">
+            <label for="formGroupExampleInput"><strong>Name (Required)</strong></label><br>
+            <input type="text">
           </div>
           <div class="form-group">
-            <label for="formGroupExampleInput2"><strong>Link to Photo Image (Required)</strong></label>
-            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Ex: https://pmcdeadline2.files.wordpress.com/2018/07/24-jack-bauer.jpg?w=446&h=299&crop=1">
+            <label for="formGroupExampleInput2"><strong>Link to Photo Image (Required)</strong></label><br>
+            <input type="text">
           </div>
         </form>
       </div>
@@ -39,7 +39,7 @@
       <div>
           <label for="inputState"><strong>Statement 1</strong></label><br>
           <p>I consider myself a mostly happy person.</p>
-          <select id="inputState" class="form-control">
+          <select>
             <option selected>Select an Option...</option>
             <option>1 (Strongly Disagree)</option>
             <option>2</option>
@@ -54,7 +54,7 @@
       <div>
           <label for="inputState"><strong>Statement 2</strong></label><br>
           <p>I enjoy helping people.</p>
-          <select id="inputState" class="form-control">
+          <select>
             <option selected>Select an Option...</option>
             <option>1 (Strongly Disagree)</option>
             <option>2</option>
@@ -69,7 +69,7 @@
       <div>
           <label for="inputState"><strong>Statement 3</strong></label><br>
           <p>I’m not superstitious, but I am a little stitious.</p>
-          <select id="inputState" class="form-control">
+          <select>
             <option selected>Select an Option...</option>
             <option>1 (Strongly Disagree)</option>
             <option>2</option>
@@ -84,7 +84,7 @@
       <div>
           <label for="inputState"><strong>Statement 4</strong></label><br>
           <p>I generally feel more comfortable when alone than when around other people.</p>
-          <select id="inputState" class="form-control">
+          <select>
             <option selected>Select an Option...</option>
             <option>1 (Strongly Disagree)</option>
             <option>2</option>
@@ -99,7 +99,7 @@
       <div>
           <label for="inputState"><strong>Statement 5</strong></label><br>
           <p>I solemnly swear that I am up to no good.</p>
-          <select id="inputState" class="form-control">
+          <select>
             <option selected>Select an Option...</option>
             <option>1 (Strongly Disagree)</option>
             <option>2</option>
@@ -114,7 +114,7 @@
       <div>
           <label for="inputState"><strong>Statement 6</strong></label><br>
           <p>I enjoy reading books.</p>
-          <select id="inputState" class="form-control">
+          <select>
             <option selected>Select an Option...</option>
             <option>1 (Strongly Disagree)</option>
             <option>2</option>
@@ -129,7 +129,7 @@
       <div>
           <label for="inputState"><strong>Statement 7</strong></label><br>
           <p>I am susceptible to the occasional Netflix binge.</p>
-          <select id="inputState" class="form-control">
+          <select>
             <option selected>Select an Option...</option>
             <option>1 (Strongly Disagree)</option>
             <option>2</option>
@@ -144,7 +144,7 @@
       <div>
           <label for="inputState"><strong>Statement 8</strong></label><br>
           <p>If I am not right about something, I want someone to tell me.</p>
-          <select id="inputState" class="form-control">
+          <select>
             <option selected>Select an Option...</option>
             <option>1 (Strongly Disagree)</option>
             <option>2</option>
@@ -159,7 +159,7 @@
       <div>
           <label for="inputState"><strong>Statement 9</strong></label><br>
           <p>I generally know what I want in life.</p>
-          <select id="inputState" class="form-control">
+          <select>
             <option selected>Select an Option...</option>
             <option>1 (Strongly Disagree)</option>
             <option>2</option>
@@ -174,7 +174,7 @@
       <div>
           <label for="inputState"><strong>Statement 10</strong></label><br>
           <p>I am smart af.</p>
-          <select id="inputState" class="form-control">
+          <select>
             <option selected>Select an Option...</option>
             <option>1 (Strongly Disagree)</option>
             <option>2</option>
@@ -184,7 +184,7 @@
           </select>
       </div>
 
-      <br>
+      <br><br>
 
       <div>
           <button id="end"><strong>End</strong></button>
@@ -218,7 +218,7 @@
 
       #end {
         display: block;
-        margin-left: auto;
+        margin-left: 20px;
         margin-right: auto;
         width: 10%;
       }
@@ -234,6 +234,10 @@
 
       label {
         font-size: 20px;
+      }
+
+      input {
+        width: 25%;
       }
 
     </style>
